--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,8 @@
+version: '3'
 services:
+  zookeeper:
+    image: zookeeper:3.7.0
+    container_name: zookeeper
+    restart: unless-stopped
+    ports:
+      - "2181:2181"
